# sundials_radau5

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.sh  lingshu.yaml
doc/: Practical Error Estimation and Step Size Selection.md  examples.md  pumpdae_smooth.m  pumpdae_smooth_doc.md  tba_ode15s.m  theory.md  user_guide.md
examples/: BECKDO_model.md  CMakeLists.txt  pump_ode15s.m  radau5_andrews.c  radau5_ark_analytic.c  radau5_beam.c  radau5_bounce.c  radau5_bruss.c  radau5_bruss_2d.c  radau5_caraxis.c  radau5_chemakzo.c  radau5_crank.c  radau5_e5.c  radau5_fekete.c  radau5_heat1d.c  radau5_hires.c  radau5_kepler.c  radau5_kneeode.c  radau5_ks.c  radau5_medakzo.c  radau5_orbit.c  radau5_orego.c  radau5_plate.c  radau5_plei.c  radau5_pollu.c  radau5_pump.c  radau5_pump_smooth.c  radau5_pump_test.c  radau5_ringmod.c  radau5_rober.c  radau5_roberts_root.c  radau5_rocket.c  radau5_tba.c  radau5_tba2.c  radau5_tba_smooth.c  radau5_transamp.c  radau5_transamp_sparse.c  radau5_vdpol.c  radau5_vdpolm.c  radau5_water.c  (+1 more)
include/: radau5.h
src/: python_stubs.c  radau5.c  radau5_colgroup.c  radau5_colgroup.h  radau5_contr.c  radau5_estrad.c  radau5_ic.c  radau5_impl.h  radau5_linsys.c  radau5_newt.c  radau5_root.c  radau5_root.h  radau5_step.c
src/nvector/complex_serial/: nvector_complex_serial.c  nvector_complex_serial.h
src/sunlinsol/complex_band/: sunlinsol_complex_band.c  sunlinsol_complex_band.h
src/sunlinsol/complex_dense/: sunlinsol_complex_dense.c  sunlinsol_complex_dense.h
src/sunlinsol/complex_sparse/: sunlinsol_complex_sparse.c  sunlinsol_complex_sparse.h
src/sunmatrix/complex_band/: sunmatrix_complex_band.c  sunmatrix_complex_band.h
src/sunmatrix/complex_dense/: sunmatrix_complex_dense.c  sunmatrix_complex_dense.h
src/sunmatrix/complex_sparse/: sunmatrix_complex_sparse.c  sunmatrix_complex_sparse.h
tests/: CMakeLists.txt  test_nvector_complex_serial.c  test_radau5_api.c  test_radau5_build_e1.c  test_radau5_build_e2.c  test_radau5_colgroup.c  test_radau5_constants.c  test_radau5_constants_high.c  test_radau5_dahlquist.c  test_radau5_dq_jac.c  test_radau5_dq_jac_sparse.c  test_sunmatrix_complex_band.c  test_sunmatrix_complex_dense.c  test_sunmatrix_complex_sparse.c  test_tba_rhs.c
